2005-10-04  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el: Rename canna_api to canna-api.

2005-09-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el (canna-activate): Fix typo in error symbol.
	Improve docstring.

2005-09-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/canna-leim.el: Add comment on autoloading strategy.
	(canna-activate): Handle CANNA in ELL.

	* dumped-lisp.el (preloaded-file-list): Remove dependency of
	canna-leim on CANNA.  Canna may be an ELL.

2005-09-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule/mule-cmds.el (input-method-alist, register-input-method):
	Improve docstrings and formal parameter names.

2005-09-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.22 "cucumber" is released.

2005-08-06  Mike Sperber  <mike@xemacs.org>

	* window-xemacs.el (really-set-window-configuration): Only set
	the frame top and left if they've changed.

2005-08-04  Mike Sperber  <mike@xemacs.org>

	* window-xemacs.el (window-configuration-equal): Compare frame top
	and left via `equal' rather than '=', as it can be nil.

2005-07-24  Fabrice Popineau <Fabrice.Popineau@supelec.fr>

	* window-xemacs.el (really-set-window-configuration): 
	* window-xemacs.el (current-window-configuration): 
	* window-xemacs.el (window-configuration-equal): 
	* window-xemacs.el (window-configuration): Add `frame-top' and
	`frame-left' field to windows configurations, and save and restore
	them.

2005-06-26  Aidan Kehoe  <kehoea@parhasard.net>

	* cmdloop.el (read-quoted-char):
	* isearch-mode.el (isearch-char-to-string):
	Remove the fourth argument from event-to-character. 
	
	* dumped-lisp.el (preloaded-file-list):
	No longer dump x-iso8859-1.el--we don't need it any more. 

	* x-init.el (x-initialize-keyboard):
	* keymap.el (events-to-keys):	
	* events.el:
	Rename the ascii-character keysym property to character-of-keysym. 

	* gtk-compose.el:
	Don't depend on gtk-iso8859-1.el

	* x-compose.el: